added sitemap gem, updated links

--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,6 @@ collections:
   models:
     output: true
     permalink: /models/:path/
+url: "https://jacob-waugh.github.io/jacobwaugh.github.io/"
+plugins:
+  - jekyll-sitemap
