--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ collections:
   models:
     output: true
     permalink: /models/:path/
+baseurl: /jacobwaugh.github.io
 url: "https://jacob-waugh.github.io/jacobwaugh.github.io/"
 plugins:
   - jekyll-sitemap
